--- a/interactive_calendar.html
+++ b/interactive_calendar.html
@@ -44,14 +44,18 @@
         <div class="arrow-button" id="next-month" style="color: #000;">&#62;</div>
     </div>
     <div class="calendar" id="calendar"></div>
-    <div class="p-4">
-        <label for="cycle-length" class="block text-sm font-medium text-gray-700">Average Cycle Length (days):</label>
-        <input type="number" id="cycle-length" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" required>
+    <div class="flex p-4">
+        <div class="mr-4">
+            <label for="cycle-length" class="block text-sm font-medium text-gray-700">Average Cycle Length (days):</label>
+            <input type="number" id="cycle-length" class="mt-1 block w-20 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" value="28" required>
+        </div>
+        <button id="generate-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Generate</button>
     </div>
-    <button id="generate-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" style="margin-top: 20px;">Generate</button>
-    <textarea id="menstrual-cycle-info" class="w-full p-4 mt-4" placeholder="Menstrual cycle info will appear here" readonly style="color: #000;"></textarea>
-    <textarea id="period-length-info" class="w-full p-4 mt-4" placeholder="Period length info will appear here" readonly style="color: #000;"></textarea>
-    <textarea id="hormone-info" class="w-full p-4 mt-4" placeholder="Hormone info will appear here" readonly style="color: #000;"></textarea>
+    <textarea id="menstrual-cycle-info" class="w-full p-4 mt-4" placeholder="Menstrual cycle info will appear here" readonly style="color: #000; width: 100%; height: 100px;"></textarea>
+    <textarea id="period-length-info" class="w-full p-4 mt-4" placeholder="Period length info will appear here" readonly style="color: #000; width: 100%; height: 100px;"></textarea>
+    <textarea id="hormone-info" class="w-full p-4 mt-4" placeholder="Hormone info will appear here" readonly style="color: #000; width: 100%; height: 150px;"></textarea>
+    <textarea id="food-recommendations" class="w-full p-4 mt-4" placeholder="Food recommendations will appear here" readonly style="color: #000; width: 100%; height: 200px;"></textarea>
+    <textarea id="exercise-recommendations" class="w-full p-4 mt-4" placeholder="Exercise recommendations will appear here" readonly style="color: #000; width: 100%; height: 200px;"></textarea>
 
     <script>
         // Get the calendar element
@@ -64,6 +68,8 @@
         const menstrualCycleInfoTextarea = document.getElementById('menstrual-cycle-info');
         const periodLengthInfoTextarea = document.getElementById('period-length-info');
         const hormoneInfoTextarea = document.getElementById('hormone-info');
+        const foodRecommendationsTextarea = document.getElementById('food-recommendations');
+        const exerciseRecommendationsTextarea = document.getElementById('exercise-recommendations');
 
         // Create a 2D array to represent the calendar
         let days = [];
@@ -145,6 +151,8 @@
                 menstrualCycleInfoTextarea.value = '';
                 periodLengthInfoTextarea.value = '';
                 hormoneInfoTextarea.value = '';
+                foodRecommendationsTextarea.value = '';
+                exerciseRecommendationsTextarea.value = '';
                 return;
             }
 
@@ -177,12 +185,68 @@
 
             if (phase === 'Menstruation') {
                 hormoneInfoTextarea.value = 'During menstruation, your estrogen and progesterone levels are at their lowest. Your body is shedding the lining of the uterus, and you may experience symptoms such as cramping, bloating, and mood swings.';
+                foodRecommendationsTextarea.value = 'During menstruation, it is recommended to eat foods that are high in iron, such as:\n' +
+                    '- Red meat\n' +
+                    '- Spinach\n' +
+                    '- Beans\n' +
+                    'Additionally, foods that are high in omega-3 fatty acids, such as:\n' +
+                    '- Salmon\n' +
+                    '- Walnuts\n' +
+                    'can help reduce inflammation and alleviate symptoms such as cramping and bloating.';
+                exerciseRecommendationsTextarea.value = 'During menstruation, it is recommended to engage in gentle exercises, such as:\n' +
+                    '- Yoga\n' +
+                    '- Walking\n' +
+                    'Avoid high-intensity exercises, such as:\n' +
+                    '- Running\n' +
+                    '- Weightlifting\n' +
+                    'as they can exacerbate symptoms.';
             } else if (phase === 'Follicular phase') {
                 hormoneInfoTextarea.value = 'During the follicular phase, your estrogen levels are increasing, causing the follicles in your ovaries to grow and mature. You may experience symptoms such as increased energy, improved mood, and a sense of well-being.';
+                foodRecommendationsTextarea.value = 'During the follicular phase, it is recommended to eat foods that are high in antioxidants, such as:\n' +
+                    '- Berries\n' +
+                    '- Leafy greens\n' +
+                    'Additionally, foods that are high in protein, such as:\n' +
+                    '- Lean meats\n' +
+                    '- Eggs\n' +
+                    'can help support the production of estrogen.';
+                exerciseRecommendationsTextarea.value = 'During the follicular phase, it is recommended to engage in moderate-intensity exercises, such as:\n' +
+                    '- Jogging\n' +
+                    '- Cycling\n' +
+                    'Avoid high-intensity exercises, such as:\n' +
+                    '- Weightlifting\n' +
+                    'as they can disrupt the balance of hormones.';
             } else if (phase === 'Ovulation') {
                 hormoneInfoTextarea.value = 'During ovulation, your estrogen levels peak, causing the release of an egg from the ovary. You may experience symptoms such as increased libido, improved mood, and a sense of confidence.';
+                foodRecommendationsTextarea.value = 'During ovulation, it is recommended to eat foods that are high in healthy fats, such as:\n' +
+                    '- Avocados\n' +
+                    '- Nuts\n' +
+                    'Additionally, foods that are high in fiber, such as:\n' +
+                    '- Whole grains\n' +
+                    '- Fruits\n' +
+                    'can help support the health of the reproductive system.';
+                exerciseRecommendationsTextarea.value = 'During ovulation, it is recommended to engage in high-intensity exercises, such as:\n' +
+                    '- Weightlifting\n' +
+                    '- High-intensity interval training\n' +
+                    'Avoid low-intensity exercises, such as:\n' +
+                    '- Yoga\n' +
+                    '- Walking\n' +
+                    'as they may not provide enough stimulation to support the production of hormones.';
             } else {
                 hormoneInfoTextarea.value = 'During the luteal phase, your progesterone levels are increasing, causing the uterine lining to thicken and prepare for a potential pregnancy. You may experience symptoms such as breast tenderness, mood swings, and fatigue.';
+                foodRecommendationsTextarea.value = 'During the luteal phase, it is recommended to eat foods that are high in complex carbohydrates, such as:\n' +
+                    '- Whole grains\n' +
+                    '- Sweet potatoes\n' +
+                    'Additionally, foods that are high in healthy fats, such as:\n' +
+                    '- Nuts\n' +
+                    '- Seeds\n' +
+                    'can help support the health of the reproductive system.';
+                exerciseRecommendationsTextarea.value = 'During the luteal phase, it is recommended to engage in low-to-moderate intensity exercises, such as:\n' +
+                    '- Yoga\n' +
+                    '- Swimming\n' +
+                    'Avoid high-intensity exercises, such as:\n' +
+                    '- Weightlifting\n' +
+                    '- High-intensity interval training\n' +
+                    'as they can disrupt the balance of hormones.';
             }
         }
 
