--- a/interactive_calendar.html
+++ b/interactive_calendar.html
@@ -53,6 +53,11 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <a href="main_menu.html">Home</a>
+        <a href="interactive_calendar.html">Tracker</a>
+        <a href="#about">About</a>
+      </div>
     <h1 class="text-3xl text-center p-4" style="color: #ff69b4;">Menstrual Cycle Tracker</h1>
     <div class="flex justify-between p-4">
         <div class="arrow-button" id="prev-month" style="color: #ff69b4;">&#60;</div>
