--- a/main_menu.html
+++ b/main_menu.html
@@ -71,7 +71,7 @@
 <body>
 <div class="navbar">
   <a href="main_menu.html">Home</a>
-  <a href="index.html">Tracker</a>
+  <a href="interactive_calendar.html">Tracker</a>
   <a href="#about">About</a>
 </div>
 <div class="container">
