added nav in tracker and changed main menu a little

--- a/interactive_calendar.html
+++ b/interactive_calendar.html
@@ -32,6 +32,21 @@
             font-weight: bold;
             color: #000;
         }
+        .navbar {
+            background-color: #ff69b4;
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+        .navbar a {
+            color: white;
+            margin: 0 1rem;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .navbar a:hover {
+            text-decoration: underline;
+        }
         body {
             background-color: #f0f0f0;
         }
