--- a/main_menu.html
+++ b/main_menu.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menstrual Cycle Tracker</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
+      background-color: #ffe6f2;
     }
     .navbar {
-      background-color: #007BFF;
+      background-color: #ff69b4;
       color: white;
       padding: 1rem;
       text-align: center;
@@ -30,7 +31,7 @@
       max-width: 600px;
       margin: 2rem auto;
       padding: 1rem;
-      background: #fff;
+      background: #ffc5c5;
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
@@ -75,7 +76,7 @@
   <a href="#about">About</a>
 </div>
 <div class="container">
-  <h1>Sync Her Up</h1>
+  <h1 style="text-align: center; font-family: 'Playfair Display';">Sync Her Up</h1>
   <p>A period cycle tracker!</p>
 </div>
 </body>
