--- a/interactive_calendar.html
+++ b/interactive_calendar.html
@@ -11,6 +11,9 @@
             display: grid;
             grid-template-columns: repeat(7, 1fr);
             gap: 1px;
+            border: 1px solid #ddd;
+            width: 800px;
+            margin: 0 auto;
         }
         .day {
             padding: 10px;
@@ -19,6 +22,7 @@
             text-align: center;
             color: #000;
             background-color: #ffe6f2;
+            border: 1px solid #ddd;
         }
         .day:hover {
             background-color: #ffc5c5;
@@ -55,6 +59,8 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 800px;
+            margin: 0 auto;
         }
         .info-section h2 {
             color: #ff69b4;
@@ -65,6 +71,21 @@
         .error-message {
             color: #ff0000;
         }
+        .days-of-week {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 1px;
+            border: 1px solid #ddd;
+            width: 800px;
+            margin: 0 auto;
+            background-color: #f0f0f0;
+        }
+        .day-of-week {
+            padding: 10px;
+            text-align: center;
+            color: #000;
+            border: 1px solid #ddd;
+        }
     </style>
 </head>
 <body>
@@ -74,14 +95,23 @@
         <a href="#about">About</a>
       </div>
     <h1 class="text-3xl text-center p-4" style="color: #ff69b4;">Menstrual Cycle Tracker</h1>
-    <div class="flex justify-between p-4">
+    <p class="text-lg text-center p-4">Please select the days of your most recent period. You can navigate through the months using the arrow buttons.</p>
+    <div class="flex justify-between p-4" style="width: 800px; margin: 0 auto;">
         <div class="arrow-button" id="prev-month" style="color: #ff69b4;">&#60;</div>
         <div id="month-year" style="color: #ff69b4;"></div>
         <div class="arrow-button" id="next-month" style="color: #ff69b4;">&#62;</div>
     </div>
-    <p class="text-lg text-center p-4">Please highlight your most recent period days:</p>
+    <div class="days-of-week">
+        <div class="day-of-week">Sunday</div>
+        <div class="day-of-week">Monday</div>
+        <div class="day-of-week">Tuesday</div>
+        <div class="day-of-week">Wednesday</div>
+        <div class="day-of-week">Thursday</div>
+        <div class="day-of-week">Friday</div>
+        <div class="day-of-week">Saturday</div>
+    </div>
     <div class="calendar" id="calendar"></div>
-    <div class="flex p-4">
+    <div class="flex p-4" style="width: 800px; margin: 0 auto;">
         <div class="mr-4">
             <label for="cycle-length" class="block text-sm font-medium text-gray-700">Average Cycle Length (days):</label>
             <input type="number" id="cycle-length" class="mt-1 block w-20 rounded-md border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500 sm:text-sm" value="28" required>
@@ -200,6 +230,7 @@
                     } else {
                         const emptyDay = document.createElement('div');
                         emptyDay.classList.add('day');
+                        emptyDay.style.visibility = 'hidden';
                         calendar.appendChild(emptyDay);
                     }
                 });
